css and html cleanup, js: cleanup, added imput validation, divided bigger functions into smaller ones for better readability

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     </header>
     <main class="container">
         <div class="container-header">
-            <p class="container-header-item container-title ">CHOOSE BUTTON AND ENTER VALUES</p>
-            <p class="container-header-item container-title " id="math-values-info">Please enter values like so: a,b</p>
+            <p class="container-header-item container-title">CHOOSE OPERATION AND ENTER VALUES</p>
+            <p class="container-header-item container-title" id="math-values-info">Please enter values like so: a,b</p>
             <input type="text" name="values" id="values" placeholder="a,b" class=" container-header-item container-header-input">    
             <button class="container-header-item container-header-button" id="math-button">press here</button>
             <p class="container-header-item container-result" id="math-result">__</p>
@@ -27,7 +27,7 @@
         <div class="container-list">
             <button class="container-list-item container-list-item-active" data-function-name="sum">
                 <p class="container-title">a + b</p>
-                <p class="container-info">Sums two values</p>
+                <p class="container-info">Add two values</p>
             </button>
             <button class="container-list-item" data-function-name="subtract">
                 <p class="container-title">a - b</p>
@@ -35,7 +35,7 @@
             </button>
             <button class="container-list-item" data-function-name="multiply">
                 <p class="container-title">a * b</p>
-                <p class="container-info">Multiplies two values</p>
+                <p class="container-info">Multiply two values</p>
             </button>
         </div>
     </main>
