js cleanup, added division

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <p class="container-header-item container-result" id="math-result">__</p>
         </div>
         <div class="container-list">
-            <button class="container-list-item container-list-item-active" data-function-name="sum">
+            <button class="container-list-item container-list-item-active" data-function-name="add">
                 <p class="container-title">a + b</p>
                 <p class="container-info">Add two values</p>
             </button>
@@ -36,6 +36,10 @@
             <button class="container-list-item" data-function-name="multiply">
                 <p class="container-title">a * b</p>
                 <p class="container-info">Multiply two values</p>
+            </button>
+            <button class="container-list-item" data-function-name="divide">
+                <p class="container-title">a / b</p>
+                <p class="container-info">Divide two values</p>
             </button>
         </div>
     </main>
