added GCD and LCM to math functions

--- a/index.html
+++ b/index.html
@@ -41,6 +41,14 @@
                 <p class="container-title">a / b</p>
                 <p class="container-info">Divide two values</p>
             </button>
+            <button class="container-list-item" data-function-name="nwd">
+                <p class="container-title">GCD (NWD)</p>
+                <p class="container-info">Greatest common divisor (Największy wspólny dzielnik)</p>
+            </button>
+            <button class="container-list-item" data-function-name="nww">
+                <p class="container-title">LCM (NWW)</p>
+                <p class="container-info">Least common multiple (Najmniejsza wspólna wielokrotność)</p>
+            </button>
         </div>
     </main>
     <footer class="footer">
