html and js cleanup, added js documentation

--- a/index.html
+++ b/index.html
@@ -21,31 +21,31 @@
             <p class="container-header-item container-title">CHOOSE OPERATION AND ENTER VALUES</p>
             <p class="container-header-item container-title" id="math-values-info">Please enter values like so: a,b</p>
             <input type="text" name="values" id="values" placeholder="a,b" class=" container-header-item container-header-input">    
-            <button class="container-header-item container-header-button" id="math-button">press here</button>
+            <button class="container-header-item container-header-button" id="compute-btn">compute</button>
             <p class="container-header-item container-result" id="math-result">__</p>
         </div>
         <div class="container-list">
-            <button class="container-list-item container-list-item-active" data-function-name="add">
+            <button class="container-list-item container-list-item-active" data-action-name="add">
                 <p class="container-title">a + b</p>
                 <p class="container-info">Add two values</p>
             </button>
-            <button class="container-list-item" data-function-name="subtract">
+            <button class="container-list-item" data-action-name="subtract">
                 <p class="container-title">a - b</p>
                 <p class="container-info">Subtract two values</p>
             </button>
-            <button class="container-list-item" data-function-name="multiply">
+            <button class="container-list-item" data-action-name="multiply">
                 <p class="container-title">a * b</p>
                 <p class="container-info">Multiply two values</p>
             </button>
-            <button class="container-list-item" data-function-name="divide">
+            <button class="container-list-item" data-action-name="divide">
                 <p class="container-title">a / b</p>
                 <p class="container-info">Divide two values</p>
             </button>
-            <button class="container-list-item" data-function-name="nwd">
+            <button class="container-list-item" data-action-name="nwd">
                 <p class="container-title">GCD (NWD)</p>
                 <p class="container-info">Greatest common divisor (Największy wspólny dzielnik)</p>
             </button>
-            <button class="container-list-item" data-function-name="nww">
+            <button class="container-list-item" data-action-name="nww">
                 <p class="container-title">LCM (NWW)</p>
                 <p class="container-info">Least common multiple (Najmniejsza wspólna wielokrotność)</p>
             </button>
