deleted fragments of code that was typed in polish language

--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
                 <p class="container-title">a / b</p>
                 <p class="container-info">Divide two values</p>
             </button>
-            <button class="container-list-item" data-action-name="nwd">
-                <p class="container-title">GCD (NWD)</p>
-                <p class="container-info">Greatest common divisor (Największy wspólny dzielnik)</p>
+            <button class="container-list-item" data-action-name="gcd">
+                <p class="container-title">GCD</p>
+                <p class="container-info">Greatest common divisor</p>
             </button>
-            <button class="container-list-item" data-action-name="nww">
-                <p class="container-title">LCM (NWW)</p>
-                <p class="container-info">Least common multiple (Najmniejsza wspólna wielokrotność)</p>
+            <button class="container-list-item" data-action-name="lcm">
+                <p class="container-title">LCM</p>
+                <p class="container-info">Least common multiple</p>
             </button>
         </div>
     </main>
