html & js: header changes

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </nav>
     </header>
     <main class="container">
-        <div class="jsheader hidden">
+        <div class="jsheader">
             <div class="jsmath-header">
                 <p class="jsmath-header-item jsmath-title">CHOOSE OPERATION AND ENTER VALUES</p>
                 <p class="jsmath-header-item jsmath-title" id="math-values-info">Please enter values like so: a,b</p>
